--- a/style.css
+++ b/style.css
@@ -21,3 +21,16 @@ h2{
   padding: 20px;
   display:inline-block
 }
+button {
+  background-color: #90EE90;
+  border: none;
+  color: black;
+  padding: 20px;
+  text-align: center;
+  button-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 12px;
+}
