--- a/style.css
+++ b/style.css
@@ -27,10 +27,9 @@ button {
   color: black;
   padding: 20px;
   text-align: center;
-  button-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
-  border-radius: 12px;
 }
+.tictactoe {border-radius: 12px;}
